Fix an issue in Chrome / Adaptive theme where the grid action buttons overflow the grid

--- a/drupal_7/themes/indiciatheme/trunk/indiciatheme/css/sass/indiciatheme.scss
+++ b/drupal_7/themes/indiciatheme/trunk/indiciatheme/css/sass/indiciatheme.scss
@@ -209,6 +209,11 @@ table.report-grid {
   float: right;
 }
 
+/* Fix an issue in Chrome / Adaptive theme where the grid action buttons overflow the grid */
+.action-button img {
+  max-width: inherit;
+}
+
 
 /** import any custom override files **/
 
